# pulse-hermes

./: .gitignore  README.md  SKILL.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
scripts/: auto_commit.sh  hermes_bootstrap.sh  last30days.py  polymarket_deep_scan.py  pulse.py
scripts/lib/: __init__.py  _mcp_client.py  adaptive_lookback.py  arxiv.py  bing_news.py  bluesky.py  cache.py  cluster.py  config.py  dates.py  dedupe.py  devto.py  filter.py  fusion.py  github.py  hackernews.py  http.py  iterative_retrieval.py  lemmy.py  llm_planner.py  lobsters.py  log.py  manifold.py  metaculus.py  neural_memory.py  news.py  normalize.py  openalex.py  pipeline.py  planner.py  polymarket.py  query_router.py  raw_filter.py  reddit.py  relevance.py  render.py  research_crew.py  rss.py  schema.py  score.py  (+13 more)
tests/: test_basic.py
